# halo

./: .gitignore  Cargo.toml  README.md  STRATEGY.md  analyze_performance.rs  backlog.md  bench_output.txt  bench_results.txt  bench_results_graph.txt  build_output.txt  check_output.txt  checklist.md  debug_sizes.rs  gap_audit.md  reproduction_test.rs  test_output.txt  verification_script.rs
benches/: active_collections_benchmark.rs  active_map_benchmark.rs  active_set_benchmark.rs  active_slice_benchmark.rs  alloc_benchmark.rs  alloc_halo.rs  alloc_mimalloc.rs  alloc_snmalloc.rs  alloc_system.rs  amt_graph_benchmark.rs  analyze_performance.rs  binary_heap_benchmark.rs  bloom_benchmark.rs  bootstrap_bench.rs  bplus_tree_benchmark.rs  branded_ptr_benchmark.rs  btree_benchmark.rs  channel_benchmark.rs  collection_performance.rs  collections_benchmark.rs  compressed_graph_benchmark.rs  cow_strings_benchmark.rs  csr_benchmark.rs  dag_benchmark.rs  disjoint_set_benchmark.rs  fenwick_benchmark.rs  ghostcell_benchmark.rs  graph_benchmark.rs  halo_benchmark.rs  hierarchy_benchmark.rs  index_map_benchmark.rs  interner_benchmark.rs  interval_map_benchmark.rs  iterators_benchmark.rs  lel_graph_benchmark.rs  linked_list_benchmark.rs  lru_cache_benchmark.rs  matrix_benchmark.rs  memory_primitives_benchmark.rs  pool_benchmark.rs  (+15 more)
benches/workloads/: larson.rs  micro.rs  mod.rs  shbench.rs  threadtest.rs
benchmark_results/: performance_comparison.json  report.md
docs/: BENCHMARKING.md  INVARIANTS.md  PERFORMANCE_REPORT.md  RUN_RESULTS.md  RUSTBELT_VALIDATION.md  UB_CHECKING.md  allocator_comparison.md
examples/: basic_usage.rs  bench_report.rs  branded_hash_map.rs  branded_vec.rs  halo_global.rs  lazy_usage.rs  linked_list_arc_ghostcell.rs  linked_list_arc_rwlock.rs  manual_bench.rs  refcell_comparison.rs  scoped_threads.rs  simple_test.rs
src/: lib.rs  repro_check.rs  token.rs
src/alloc/: allocator.rs  arena.rs  branded.rs  branded_box.rs  branded_rc.rs  buddy.rs  bump.rs  concurrent_slab.rs  generational_pool.rs  global.rs  heap.rs  mod.rs  page.rs  pool.rs  rseq.rs  slab.rs  static_rc.rs
src/alloc/segregated/: freelist.rs  manager.rs  mod.rs  size_class.rs  slab.rs  tests.rs
src/alloc/stage3/: manager.rs  slab.rs  tests.rs
src/alloc/system/: constants.rs  mod.rs  syscall.rs
src/allocator/: constants.rs  mod.rs  permissions.rs
src/allocator/bootstrap/: arena.rs  init.rs  mod.rs
src/allocator/core/: allocator.rs  mod.rs  page.rs
src/allocator/integration/: mod.rs  thread_cache.rs
src/allocator/stats/: metrics.rs
src/allocator/syscall/: mod.rs  unix.rs  windows.rs
src/cell/: mod.rs
src/cell/ghost/: ghost_cell.rs  mod.rs  ops_borrow.rs  ops_copy.rs  ops_functional.rs
src/cell/lazy/: mod.rs
src/cell/raw/: ghost_cell.rs  ghost_ref_cell_new.rs  ghost_unsafe_cell.rs  mod.rs
src/collections/: branded_deque.rs  branded_hash_map.rs  branded_hash_set.rs  branded_vec.rs  branded_vec_deque.rs  chunked_vec.rs  mod.rs  string.rs
src/collections/btree/: active.rs  active_bplus_tree.rs  bplus_tree.rs  btree_map.rs  btree_set.rs  mod.rs
src/collections/hash/: active.rs  active_set.rs  external_map.rs  hash_map.rs  hash_set.rs  index_map.rs  linked_hash_map.rs  mod.rs
src/collections/other/: active.rs  arena.rs  binary_heap.rs  bit_set.rs  bloom_filter.rs  chain.rs  cow.rs  cow_strings.rs  deque.rs  disjoint_set.rs  (+11 more)
src/concurrency/: cache_padded.rs  mod.rs  scoped.rs
src/graph/: adj_list.rs  adjacency_graph.rs  bipartite_graph.rs  dag.rs  ghost_adjacency_graph.rs  ghost_amt_graph.rs  ghost_bipartite_graph.rs  ghost_compressed_graph.rs  ghost_csc_graph.rs  ghost_csr_graph.rs  ghost_dag.rs  ghost_ecc_graph.rs  ghost_lel_graph.rs  mod.rs  pool_graph.rs  traversal.rs
src/token/: global.rs  hierarchy.rs  invariant.rs  macros.rs  mod.rs  shared.rs  traits.rs
tests/: alloc_test.rs  basic_tests.rs  bootstrap_integration.rs  bplus_tree_proptest.proptest-regressions  bplus_tree_proptest.rs  buddy_test.rs  chunked_vec.rs  collection_tests.rs  collections_extra_tests.rs  comprehensive_tests.rs  concurrency_traits.rs  concurrent_slab_test.rs  generational_pool_test.rs  ghost_atomic_bitset.rs  ghost_atomics.rs  ghost_channel_test.rs  ghost_chase_lev.rs  ghost_csr_graph.rs  ghost_once_lock_test.rs  ghost_scoped_commit.rs  ghost_worklist.rs  global_allocator_integration.rs  memory_primitives_test.rs  shared_token_test.rs  slab_test.rs  static_rc_test.rs  static_token_test.rs  sync_test.rs  vec_deque_drain.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+110 files in other folders)
