[package]
name = "halo"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
description = "A protective toolkit for safe, high-performance data structures using ghost tokens"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryancinsight/halo"
readme = "README.md"
keywords = ["ghost-cell", "data-structures", "concurrency", "memory-safety", "performance"]
categories = ["data-structures", "concurrency", "memory-management"]

[dependencies]
anyhow = "1.0"
crossbeam-utils = "0.8"
rayon = { version = "1.8", optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
zerocopy = "0.7"
proptest = { version = "1.4", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
loom = "0.7"

[[bench]]
name = "halo_benchmark"
harness = false

[[bench]]
name = "ghostcell_benchmark"
harness = false

[[bench]]
name = "collections_benchmark"
harness = false

[[bench]]
name = "dag_benchmark"
harness = false

[[bench]]
name = "collection_performance"
harness = false

[[bench]]
name = "binary_heap_benchmark"
harness = false

[[bench]]
name = "lru_cache_benchmark"
harness = false

[[bench]]
name = "iterators_benchmark"
harness = false

[[bench]]
name = "linked_list_benchmark"
harness = false

[[bench]]
name = "small_vec_benchmark"
harness = false

[[bin]]
name = "analyze_performance"
path = "analyze_performance.rs"

[features]
default = []
parallel = ["rayon"]
tracing = ["dep:tracing"]
proptest = ["dep:proptest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
[[bench]]
name = "skip_list_benchmark"
harness = false

[[bench]]
name = "slot_map_benchmark"
harness = false

[[bench]]
name = "index_map_benchmark"
harness = false

[[bench]]
name = "alloc_benchmark"
harness = false

[[bench]]
name = "interval_map_benchmark"
harness = false

[[bench]]
name = "trie_benchmark"
harness = false
[[bench]]
name = "active_map_benchmark"
harness = false

[[bench]]
name = "shared_token_benchmark"
harness = false

[[bench]]
name = "matrix_benchmark"
harness = false

[[bench]]
name = "string_benchmark"
harness = false

[[bench]]
name = "active_set_benchmark"
harness = false

[[bench]]
name = "bplus_tree_benchmark"
harness = false

[[bench]]
name = "memory_primitives_benchmark"
harness = false

[[bench]]
name = "segment_tree_benchmark"
harness = false

[[bench]]
name = "rope_benchmark"
harness = false
