[package]
name = "halo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
smallvec = "1.11"
crossbeam = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
rayon = "1.10"
rkyv = "0.7"
wgpu = "0.19"
bytemuck = "1.14"
futures = "0.3"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading"] }
proptest = { version = "1.4", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
proptest = ["dep:proptest"]

[[bench]]
name = "bplus_tree_benchmark"
harness = false

[[test]]
name = "bplus_tree_proptest"
path = "tests/bplus_tree_proptest.rs"
